# express_tally

./: pyproject.toml
express_tally/: receive_tally.py
