[project]
name = "express_tally"
authors = [
    { name = "Laxman Tandon", email = "laxmantandon@gmail.com" }
]
description = "This application sync data between tally and erpnext using frappe rest api"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
